--- a/customerService.properties
+++ b/customerService.properties
@@ -2,3 +2,5 @@ server.port=8080
 spring.data.mongodb.uri=mongodb+srv://rootspring:Rr4uihlMvDhm3fmM@cluster0.yh49o.mongodb.net/customerdb
 logging.level.root=INFO
 logging.level.com.baeldung=TRACE
+logging.level.org.springframework.cloud=DEBUG
+logging.level.org.springframework.web=DEBUG
