--- a/accountService.properties
+++ b/accountService.properties
@@ -1,6 +1,8 @@
 server.port=8081
+services.customer.url=http://localhost:8080
 spring.data.mongodb.uri=mongodb+srv://rootspring:Rr4uihlMvDhm3fmM@cluster0.yh49o.mongodb.net/accountdb
 logging.level.root=INFO
 logging.level.com.baeldung=TRACE
 logging.level.org.springframework.cloud=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.org.data.mongodb=DEBUG
